--- a/src/demoportal_fe/src/index.html
+++ b/src/demoportal_fe/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://uikit.infocert.it/dist/v1/ui-kit.min.css" rel="stylesheet">
+  <script src="https://uikit.infocert.it/dist/v1/ui-kit.min.js"></script>
+  
 </head>
 <body>
   <app-root></app-root>
